--- a/代码类/WEB管理端前端/www/index.html
+++ b/代码类/WEB管理端前端/www/index.html
@@ -71,8 +71,7 @@
 					</a>
 					</li>
 					<li>
-					<a data-href="login.html" data-title="退出系统"
-					 href="javascript:void(0)">
+					<a href="login.html" data-title="退出系统">
 					 退出系统
 					</a>
 					</li>
