管理端部分修改

--- a/代码类/WEB管理端前端/运营管理平台/www/article-edt.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/article-edt.html
@@ -14,7 +14,9 @@
 <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
-
+<style type="text/css">
+	a:hover{color:#FFFFFF;text-decoration:none;}
+</style>
 
 <title>修改密码</title>
 
@@ -56,7 +58,8 @@
 		
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit">确认修改</button>
+				<button class="btn btn-primary radius">
+				<a href="login.html">确认修改</a></button>
 				<button onClick="removeIframe();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
