--- a/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
@@ -27,28 +27,28 @@
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">学校代码</th>
-					<th width="80">院校名称</th>
-					<th width="80">校徽</th>
-					<th width="80">院校介绍</th>
+					<th width="80">机构代码</th>
+					<th width="80">机构名称</th>
+					<th width="80">机构logo</th>
+					<th width="80">机构介绍</th>
 					<th width="80">所在城市</th>
 					<th width="80">所在省份</th>
-					<th width="80">学校类型</th>
+					<th width="80">类型</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
 			<tbody >
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>10001</td>
-					<td>大学</td>
+					<td>50005</td>
+					<td>培训中心</td>
 					<td>
 					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
 					</td>
-					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
+					<td>我们培训中心师资力量十分强大，可以帮助学生很好地提升自己的学习水平。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td>高等院校</td>
+					<td>培训机构</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
