平台管理端前端

--- a/代码类/WEB管理端前端/运营管理平台/www/index.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/index.html
@@ -89,8 +89,8 @@
 			<dt><i class="Hui-iconfont">&#xe62e;</i> 交流监管<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="admin-role.html" data-title="敏感词管理" href="javascript:void(0)">敏感词管理</a></li>
-					<li><a data-href="admin-role.html" data-title="全文搜索" href="javascript:void(0)">全文搜索</a></li>
+					<li><a data-href="sensitive-words.html" data-title="敏感词管理" href="javascript:void(0)">敏感词管理</a></li>
+					<!-- <li><a data-href="admin-role.html" data-title="全文搜索" href="javascript:void(0)">全文搜索</a></li> -->
 				</ul>
 			</dd>
 		</dl>
@@ -100,8 +100,8 @@
 			<dt><i class="Hui-iconfont">&#xe6df;</i> 实时数据统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="admin-role.html" data-title="统计" href="javascript:void(0)">实时在线人数统计</a></li>
-					<li><a data-href="admin-role.html" data-title="统计" href="javascript:void(0)">实时服务器负载状况</a></li>
+					<li><a data-href="peoplenum.html" data-title="统计" href="javascript:void(0)">实时在线人数统计</a></li>
+					<!-- <li><a data-href="admin-role.html" data-title="统计" href="javascript:void(0)">实时服务器负载状况</a></li> -->
 				</ul>
 			</dd>
 		</dl>
@@ -110,8 +110,8 @@
 			<dt><i class="Hui-iconfont">&#xe643;</i> 入驻管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="admin-role.html" data-title="入驻管理" href="javascript:void(0)">申请列表</a></li>
-					<li><a data-href="admin-role.html" data-title="入驻管理" href="javascript:void(0)">已处理申请</a></li>
+					<li><a data-href="entering-list.html" data-title="入驻管理" href="javascript:void(0)">申请列表</a></li>
+					<li><a data-href="entered.html" data-title="入驻管理" href="javascript:void(0)">已处理申请</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -120,8 +120,8 @@
 			<dt><i class="Hui-iconfont">&#xe639;</i> 财务管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="admin-role.html" data-title="财务管理" href="javascript:void(0)">平台资金总额</a></li>
-					<li><a data-href="admin-role.html" data-title="财务管理" href="javascript:void(0)">账单查询</a></li>
+					<!-- <li><a data-href="admin-role.html" data-title="财务管理" href="javascript:void(0)">平台资金总额</a></li> -->
+					<li><a data-href="platform_bill.html" data-title="财务管理" href="javascript:void(0)">账单查询</a></li>
 				</ul>
 			</dd>
 		</dl>
