--- a/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -33,7 +33,7 @@
 <title>品牌管理</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 轮播图管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 入驻管理 <span class="c-gray en">&gt;</span> 申请列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	
 	<div class="mt-20">
@@ -41,21 +41,35 @@
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">院校代码</th>
-					<th width="80">图片</th>
-					<th width="80">广告类别</th>
-					<th width="80">链接</th>
+					<th width="80">院校名</th>
+					<th width="80">院校类型</th>
+					<th width="80">校徽</th>
+					<th width="80">院校简介</th>
+					<th width="80">所在城市</th>
+					<th width="80">所在省份</th>
+					<th width="80">执照照片</th>
+					<th width="80">申请人姓名</th>
+					<th width="80">申请人身份证</th>
+					<th width="80">通知手机号</th>
+					<th width="80">通知邮箱</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
+					<td>大学</td>
+					<td>高等院校</td>
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>广告</td>
-					<td><a href="www.baidu.com"><h3>百度</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td>张三</td>
+					<td>330000000000000000</td>
+					<td>15100000000</td>
+					<td>15100000000@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
 					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
@@ -77,7 +91,7 @@ $('.table-sort').dataTable({
 	"bStateSave": true,//状态保存
 	"aoColumnDefs": [
 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,5]}// 制定列不参与排序
+	  {"orderable":false,"aTargets":[0,12]}// 制定列不参与排序
 	]
 });
 </script>
