--- a/代码类/WEB管理端前端/运营管理平台/www/peoplenum.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/peoplenum.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -14,52 +14,14 @@
 	id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 
-<style type="text/css">  
-#mytable {  
-    table-layout: fixed;  
-    width: 98% border:0px;  
-    margin: 0px;  
-}  
-
-#mytable tr td {  
-    text-overflow: ellipsis; /* for IE */  
-    -moz-text-overflow: ellipsis; /* for Firefox,mozilla */  
-    overflow: hidden;  
-    white-space: nowrap;  
-    text-align: center;  
-}  
-</style>
-
 <title>品牌管理</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 门户管理 <span class="c-gray en">&gt;</span> 轮播图管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 实时数据统计 <span class="c-gray en">&gt;</span> 实时人数统计 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	
 	<div class="mt-20">
-		<table id="mytable" class="table table-border table-bordered table-bg table-sort">
-			<thead>
-				<tr class="text-c">
-					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">院校代码</th>
-					<th width="80">图片</th>
-					<th width="80">广告类别</th>
-					<th width="80">链接</th>
-					<th width="80">操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="text-c">
-					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>广告</td>
-					<td><a href="www.baidu.com"><h3>百度</h3></a></td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
-					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-			</tbody>
-		</table>
+		<img src="img/ppn.png">
 	</div>
 </div>
  
