--- a/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/sensitive-words.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -41,20 +41,26 @@
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">院校代码</th>
-					<th width="80">图片</th>
-					<th width="80">广告类别</th>
-					<th width="80">链接</th>
+					<th width="80">敏感词</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>1</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>广告</td>
-					<td><a href="www.baidu.com"><h3>百度</h3></a></td>
+					<td>01</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>02</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>05</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
 					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
@@ -77,7 +83,7 @@ $('.table-sort').dataTable({
 	"bStateSave": true,//状态保存
 	"aoColumnDefs": [
 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,5]}// 制定列不参与排序
+	  {"orderable":false,"aTargets":[0,2]}// 制定列不参与排序
 	]
 });
 </script>
