教务管理端系统管理部分

--- a/代码类/WEB管理端前端/教务管理端/www/edu_admin.html
+++ b/代码类/WEB管理端前端/教务管理端/www/edu_admin.html
@@ -13,33 +13,34 @@
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 
+
+
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 班级管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">所属院系号</th>
-					<th width="80">院校号</th>
-					<th width="80">班级代码</th>
-					<th width="80">班级名称</th>
-					<th width="80">班级说明</th>
+					<th width="80">所属院校</th>
+					<th width="80">教工号</th>
+					<th width="80">教务管理员姓名</th>
+					<th width="80">登录密码</th>
+					<th width="80">教务权限</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
-					
-					<td>2000010</td>
-					<td>20001</td>
-					<td>2000010001</td>
-					<td>物理A班</td>
-					<td>物理系专业的优秀班级</td>
+					<td>大学</td>
+					<td>10002</td>
+					<td>A管理</td>
+					<td>123987</td>
+					<td>查看</td>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
