--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -106,27 +106,27 @@
 								</a>
 							</li>
 							<li>
-								<a data-href="organization-list.html" data-title="教师管理" href="javascript:;">
+								<a data-href="teacher-list.html" data-title="教师管理" href="javascript:;">
 									教师管理
 								</a>
 							</li>
 							<li>
-								<a data-href="pmanager-list.html" data-title="学生管理" href="javascript:;">
+								<a data-href="student-list.html" data-title="学生管理" href="javascript:;">
 									学生管理
 								</a>
 							</li>
 							<li>
-								<a data-href="pmanager-list.html" data-title="课程管理" href="javascript:;">
+								<a data-href="course-list.html" data-title="课程管理" href="javascript:;">
 									课程管理
 								</a>
 							</li>
 							<li>
-								<a data-href="pmanager-list.html" data-title="教务管理" href="javascript:;">
+								<a data-href="edu_admin.html" data-title="教务管理" href="javascript:;">
 									教务管理
 								</a>
 							</li>
 							<li>
-								<a data-href="pmanager-list.html" data-title="直播间管理" href="javascript:;">
+								<a data-href="live_room.html" data-title="直播间管理" href="javascript:;">
 									直播间管理
 								</a>
 							</li>
