--- a/代码类/WEB管理端前端/教务管理端/www/course-list.html
+++ b/代码类/WEB管理端前端/教务管理端/www/course-list.html
@@ -13,21 +13,33 @@
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 
+
+
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 班级管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">所属院系号</th>
-					<th width="80">院校号</th>
-					<th width="80">班级代码</th>
-					<th width="80">班级名称</th>
-					<th width="80">班级说明</th>
+					<th width="80">课程代码</th>
+					<th width="80">课程名称</th>
+					<th width="80">课程简介</th>
+					<th width="80">任课老师</th>
+					<th width="80">开课学校</th>
+					<th width="80">开课院系</th>
+					<th width="80">开课班级</th>
+					<th width="80">课程分类</th>
+					<th width="80">限制人数</th>
+					<th width="80">学习人数</th>
+					<th width="80">封面图片</th>
+					<th width="80">课程类型</th>
+					<th width="80">已更新课时</th>
+					<th width="80">总课时</th>
+					<th width="80">课程价格</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
@@ -35,11 +47,21 @@
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
 					
-					<td>2000010</td>
-					<td>20001</td>
-					<td>2000010001</td>
-					<td>物理A班</td>
-					<td>物理系专业的优秀班级</td>
+					<td>10025</td>
+					<td>大学物理</td>
+					<td>深入学习物理</td>
+					<td>张四</td>
+					<td>大学</td>
+					<td>物理系</td>
+					<th>物理A班</th>
+					<th>理科</th>
+					<th>无</th>
+					<th>150</th>
+					<th><img src="img/logo2.png"></th>
+					<th>直播课</th>
+					<th>8</th>
+					<th>50</th>
+					<th>25.26</th>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
