--- a/代码类/WEB管理端前端/教务管理端/www/student-list.html
+++ b/代码类/WEB管理端前端/教务管理端/www/student-list.html
@@ -16,18 +16,20 @@
 <title>查看信息</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 班级管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 系统管理 <span class="c-gray en">&gt;</span> 学生管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
-					<th width="80">所属院系号</th>
-					<th width="80">院校号</th>
-					<th width="80">班级代码</th>
-					<th width="80">班级名称</th>
-					<th width="80">班级说明</th>
+					<th width="80">学生姓名</th>
+					<th width="80">学生学号</th>
+					<th width="80">所属院校</th>
+					<th width="80">所在系</th>
+					<th width="80">所在班级</th>
+					<th width="80">登录密码</th>
+					<th width="80">绑定用户</th>
 					<th width="80">操作</th>
 				</tr>
 			</thead>
@@ -35,11 +37,13 @@
 				<tr class="text-c">
 					<td><input type="checkbox" value="" name=""></td>
 					
-					<td>2000010</td>
-					<td>20001</td>
-					<td>2000010001</td>
+					<td>刘六</td>
+					<td>15000000</td>
+					<td>大学</td>
+					<td>物理</td>
 					<td>物理A班</td>
-					<td>物理系专业的优秀班级</td>
+					<td>123456</td>
+					<th>15000000</th>
 					<td class="f-14 td-manage">
 					<a style="text-decoration:none" class="ml-5" 
 						onClick="article_del(this,'10001')" href="javascript:;"
