教务管理端部分完善

--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -140,7 +140,7 @@
 					<dd>
 						<ul>
 							<li>
-								<a data-href="banner-list.html" data-title="实时数据统计" href="javascript:void(0)">实时数据统计</a>
+								<a data-href="peoplenum.html" data-title="实时数据统计" href="javascript:void(0)">实时数据统计</a>
 							</li>
 						</ul>
 					</dd>
@@ -151,13 +151,12 @@
 					<dd>
 						<ul>
 							<li>
-								<a data-href="sensitive-words.html" data-title="轮播图管理" href="javascript:void(0)">轮播图管理</a>
+							    <a data-href="banner-list.html" data-title="轮播图管理" href="javascript:void(0)">轮播图管理</a>
 							</li>
+					        <li>
+					            <a data-href="sinfor_list.html" data-title="资讯管理" href="javascript:void(0)">资讯管理</a></li>
 							<li>
-								<a data-href="admin-role.html" data-title="资讯管理" href="javascript:void(0)">资讯管理</a>
-							</li>
-							<li>
-								<a data-href="admin-role.html" data-title="公告管理" href="javascript:void(0)">公告管理</a>
+								<a data-href="school-notice.html" data-title="公告管理" href="javascript:void(0)">公告管理</a>
 							</li>
 						</ul>
 					</dd>
@@ -169,7 +168,7 @@
 					<dd>
 						<ul>
 							<li>
-								<a data-href="peoplenum.html" data-title="学生成绩查询" href="javascript:void(0)">学生成绩查询</a>
+								<a data-href="grade.html" data-title="学生成绩查询" href="javascript:void(0)">学生成绩查询</a>
 							</li>
 							<li>
 								<a data-href="admin-role.html" data-title="参与度分析" href="javascript:void(0)">参与度分析</a>
@@ -178,7 +177,7 @@
 								<a data-href="admin-role.html" data-title="实训效果分析" href="javascript:void(0)">实训效果分析</a>
 							</li>
 							<li>
-								<a data-href="admin-role.html" data-title="学生能力档案" href="javascript:void(0)">学生能力档案</a>
+								<a data-href="ability.html" data-title="学生能力档案" href="javascript:void(0)">学生能力档案</a>
 							</li>
 						</ul>
 					</dd>
