教务管理端添加完善部分内容

--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -192,7 +192,7 @@
 								<a data-href="entering-list.html" data-title="实训交流监管" href="javascript:void(0)">实训交流监管</a>
 							</li>
 							<li>
-								<a data-href="entered.html" data-title="敏感词设置" 
+								<a data-href="sensitive_word.html" data-title="敏感词设置" 
 								   href="javascript:void(0)">敏感词设置</a>
 							</li>
 							<li>
