教务管理端整理

--- a/代码类/WEB管理端前端/教务管理端/www/index.html
+++ b/代码类/WEB管理端前端/教务管理端/www/index.html
@@ -171,11 +171,11 @@
 								<a data-href="grade.html" data-title="学生成绩查询" href="javascript:void(0)">学生成绩查询</a>
 							</li>
 							<li>
-								<a data-href="admin-role.html" data-title="参与度分析" href="javascript:void(0)">参与度分析</a>
-							</li>
+								<a data-href="participation.html" data-title="参与度分析" href="javascript:void(0)">参与度分析</a>
+							</li><!-- 
 							<li>
 								<a data-href="admin-role.html" data-title="实训效果分析" href="javascript:void(0)">实训效果分析</a>
-							</li>
+							</li> -->
 							<li>
 								<a data-href="ability.html" data-title="学生能力档案" href="javascript:void(0)">学生能力档案</a>
 							</li>
@@ -188,21 +188,21 @@
 				<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 					<dd>
 						<ul>
-							<li>
+							<!-- <li>
 								<a data-href="entering-list.html" data-title="实训交流监管" href="javascript:void(0)">实训交流监管</a>
-							</li>
+							</li> -->
 							<li>
 								<a data-href="sensitive_word.html" data-title="敏感词设置" 
 								   href="javascript:void(0)">敏感词设置</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a data-href="entered.html" data-title="全文搜索" 
 								   href="javascript:void(0)">全文搜索</a>
 							</li>
 							<li>
 								<a data-href="entered.html" data-title="话题锁定删除" 
 								   href="javascript:void(0)">话题锁定删除</a>
-							</li>
+							</li> -->
 						</ul>
 					</dd>
 				</dl>
