修改了接口文档和微信端

--- a/代码类/微信公众号后台/yzedu/app/infomation/company_info.html
+++ b/代码类/微信公众号后台/yzedu/app/infomation/company_info.html
@@ -50,9 +50,7 @@
 						</li>
 					</div>
 					<div class="info_bottom">
-						<span id="right_info">作者：测试用户</span><br />
-						<span >所属院校：杭州测试学院</span><br />
-						<span id="right_time">更新于： 2018-03-31 18:18</span>
+						<span id="right_time">更新于： 2018-03-31</span>
 					</div>
 				</div>
 				<div class="mui-card">
@@ -72,9 +70,7 @@
 						</li>
 					</div>
 					<div class="info_bottom">
-						<span id="right_info">作者：测试用户</span><br />
-						<span >所属院校：杭州软件学院</span><br />
-						<span id="right_time">更新于： 2018-03-31 18:18</span>
+						<span id="right_time">更新于： 2018-03-31</span>
 					</div>
 				</div>
 				<div class="mui-card">
@@ -93,9 +89,7 @@
 						</li>
 					</div>
 					<div class="info_bottom">
-						<span id="right_info">作者：测试用户</span><br />
-						<span >所属院校：杭州测试学院</span><br />
-						<span id="right_time">更新于： 2018-03-31 18:18</span>
+						<span id="right_time">更新于： 2018-03-31</span>
 					</div>
 				</div>
 				
