--- a/代码类/微信公众号后台/yzedu/app/course/hot_course.html
+++ b/代码类/微信公众号后台/yzedu/app/course/hot_course.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 	<head>
-		<meta charset="UTF-8">
-		<title></title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		
-		<link rel="stylesheet" href="../../css/mui.min.css" />
+		<title>热门课程</title>
+
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+
 	</head>
 
 	<body>
@@ -15,96 +16,50 @@
         	时间：2018-04-01
         	描述：卡片1
         -->
-		<div class="mui-card" onclick="card_jump()">
-			<!--页眉-->
-			<div class="mui-card-header mui-card-media">
-				<img src="../../images/logo.png" />
-				<div class="mui-media-body">
-					<h4>热门课程</h4>
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-			<div class="mui-card-header mui-card-media" style="height:144pt;background-image:url(../../images/57077a1200013d0206000338-240-135.jpg)"></div>
-
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">来自携程C4技术沙龙的现场分享！</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
+		<div id="new_course_main">
+			
+		
 
 		</div>
-		<!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片2
-        -->
-		<div class="mui-card" onclick="card_jump()">
-			<div class="mui-card-header mui-card-media" style="height:144pt;background-image:url(../../images/567a67fb00013a2b06000338-240-135.jpg)"></div>
-
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">本课程是《Shell典型应用》系列课程的第三门，主要介绍如何监控nginx和mysql的运行状态。包括对nginx服务器的响应状态和QPS等的并发响应参数进行分析，以及对mysql服务情况和主从响应状态的监控。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-		</div>
-		<!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片3
-        -->
-		<div class="mui-card" onclick="card_jump()">
-			<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/58807245000110e206000338-240-135.jpg)"></div>
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">伪静态是SEO重要的方法，通过重定向来实现，并且可以通过重定向来隐藏网站的技术，过滤异常访问。本课分为两部分，前半部分详细介绍Apache重定向的基础知识，后半部分通过多个实际案例再次加深对重定向的理解，并且会演示各种重定向设置后的实际效果。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-		</div>
-		<!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片4
-        -->
-		<div class="mui-card" onclick="card_jump()">
-			<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/598938e20001888e06000338-240-135.jpg)"></div>
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">
-					通过学习本课程，可以了解http类型接口之间的不同差异， 针对不同类型的接口设计不同的接口测试方案， 了解常见工具的特性，根据特性选择适合自己的测试工具， 使用合适的测试工具对不同类型的接口进行测试，用高效的方法去做最繁琐的事情。
-				</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">mui.init()
-
-function card_jump() {
-	window.location.href = "hot_course_detail.html";
-}</script>
+	
+        
 	</body>
+	<script src="../../js/mui.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" charset="utf-8">
+		mui.init();
+
+		$(document).ready(function() {
+      // alert("loading");
+      $.ajax({
+      url:"http://www.fstechnology.cn:8080/YZEduDBServer/TopCourse?page=1&userid=1",//请求地址
+      dataType:"json",//数据格式 
+      type:"get",//请求方式
+      async : false,//是否异步请求
+      success : function(data) {   //如何发送成功
+      if(data.result_code!=0){
+      	alert(data.message);
+      }else{
+      	var n=eval(data.return_data).length;
+      	for(var i=0;i<n;i++){
+      		var showImg="";
+      		if(data.return_data[i].course_cover!=null)
+      			showImg="<img class='mui-card-header mui-card-media' style='width:100%;' src='http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile="+data.return_data[i].course_cover+"'>";
+      		$("#new_course_main").append(
+      			"<div class='mui-card'>"+
+			showImg+
+			"<div class='mui-card-content'>"+
+				"<p style='text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;'>"
+				+data.return_data[i].course_name+"</p>"+
+			"</div>"+
+		"</div>"
+      			);
+      	}
+
+      }
+     },
+ })
+ });
+	</script>
 
 </html>
