--- a/代码类/微信公众号后台/yzedu/app/course/new_course.html
+++ b/代码类/微信公众号后台/yzedu/app/course/new_course.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<title>新课速递</title>
 
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 
@@ -16,97 +16,50 @@
         	时间：2018-04-01
         	描述：卡片1
         -->
-		<div class="mui-card" onclick="card_jump()">
-			<!--页眉-->
-			<div class="mui-card-header mui-card-media">
-				<img src="../../images/logo.png" />
-				<div class="mui-media-body">
-					<h4>最新课程</h4>
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-			<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/53fed63700018a9306000338-240-135.jpg)"></div>
-
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">本课程属于DNS学习课程中的进阶学习阶段，在之前的两部曲《Linux智能DNS之Bind服务》和《Linux Bind负载均衡》的基础内容之上，内容重点之一介绍智能DNS的作用、实现方法。内容重点之二，介绍DNS安全内容，讲解DNS常见攻击的实现原理，和有效预防手段。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
+		<div id="new_course_main">
+			
+		
 
 		</div>
-		<!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片2
-        -->
-		<div class="mui-card" onclick="card_jump()">
-			<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/55f147b400019c4d25001408-240-135.jpg)"></div>
-
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">本课程是《Linux权限管理之基本权限》的后续篇，为小伙伴们带来了Linux中常用的一些特殊权限命令，包括ACL权限、sudo权限、文件特殊权限和不可改变位权限。通过@Tony老师的精彩讲解，一定会让你对Linux中的权限有更深刻的认识。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-		</div>
-		<!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片3
-        -->
-        <div class="mui-card" onclick="card_jump()">
-        	<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/562da5410001b40a06000338-240-135.jpg)"></div>
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">《shell典型应用》系列主要使用shell脚本来实现企业中的常见应用，包括主控脚本实现、Linux系统信息及运行状态获取、ngnix和mysql应用状态分析、应用日志分析四个部分。本门课程主要介绍主控脚本实现，以及案例的一些准备工作。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-        </div>
-        <!--
-        	作者：offline
-        	时间：2018-04-01
-        	描述：卡片4
-        -->
-        <div class="mui-card" onclick="card_jump()">
-        	<div class="mui-card-header mui-card-media" style="height:40vw;background-image:url(../../images/5697799a0001e99006000338-240-135.jpg)"></div>
-			<!--内容区-->
-			<div class="mui-card-content">
-				<p style="text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;">本课程为小伙伴们介绍如何对Linux系统进行管理，包括进程管理、工作管理、系统资源查看和定时任务，每个部分讲师都进行了详细的讲解。相信通过本课程的学习，你的Linux技能会有进一步提升。</p>
-			</div>
-			<!--页脚，放置补充信息或支持的操作-->
-			<div class="mui-card-footer">
-				<div class="mui-media-body">
-					小M
-					<p>发表于 2016-06-30 15:30</p>
-				</div>
-			</div>
-        </div>
+	
         
 	</body>
 	<script src="../../js/mui.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
 		mui.init();
 
-		function card_jump() {
-			window.location.href = "new_course_detail.html";
-		}
+		$(document).ready(function() {
+      // alert("loading");
+      $.ajax({
+      url:"http://www.fstechnology.cn:8080/YZEduDBServer/NewCourse?page=1&userid=1",//请求地址
+      dataType:"json",//数据格式 
+      type:"get",//请求方式
+      async : false,//是否异步请求
+      success : function(data) {   //如何发送成功
+      if(data.result_code!=0){
+      	alert(data.message);
+      }else{
+      	var n=eval(data.return_data).length;
+      	for(var i=0;i<n;i++){
+      		var showImg="";
+      		if(data.return_data[i].course_cover!=null)
+      			showImg="<img class='mui-card-header mui-card-media' style='width:100%;' src='http://www.fstechnology.cn:8080/YZEduFileServer/showImg?myfile="+data.return_data[i].course_cover+"'>";
+      		$("#new_course_main").append(
+      			"<div class='mui-card'>"+
+			showImg+
+			"<div class='mui-card-content'>"+
+				"<p style='text-indent:2em;line-height: 15pt;margin-top: 5pt;padding: 0pt 5pt 0pt 5pt;'>"
+				+data.return_data[i].course_name+"</p>"+
+			"</div>"+
+		"</div>"
+      			);
+      	}
+
+      }
+     },
+ })
+ });
 	</script>
 
 </html>
