平台管理端数据填充完成（图片不够）

--- a/代码类/WEB管理端前端/运营管理平台/www/entered.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/entered.html
@@ -58,18 +58,99 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学</td>
+					<td>大学B</td>
 					<td>高等院校</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
 					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>张三</td>
-					<td>330000000000000000</td>
-					<td>15100000000</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>苗名</td>
+					<td>330000000000500000</td>
+					<td>15100003000</td>
+					<td>15100002200@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>机构C</td>
+					<td>教育机构</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>我们机构有着十分强大的师资力量。</td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>Lili</td>
+					<td>330000000300000000</td>
+					<td>15100123000</td>
+					<td>151045000000@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>机构S</td>
+					<td>学习机构</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td></td>
+					<td>台州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>东方六</td>
+					<td>330000000000000666</td>
+					<td>15100012345</td>
+					<td>15100034560@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学Q</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td> </td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>黄山</td>
+					<td>330000230000000000</td>
+					<td>15100005300</td>
 					<td>15100000000@163.com</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学G</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>学生学习的圣地，经常进行一些科研实验。</td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>宋壹</td>
+					<td>330000980000000000</td>
+					<td>15100005200</td>
+					<td>15100003000@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学P</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td></td>
+					<td>绍兴</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>北河</td>
+					<td>330000000000001100</td>
+					<td>15100011100</td>
+					<td>15100000100@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i>
+					</a></td>
 				</tr>
 			</tbody>
 		</table>
