--- a/代码类/WEB管理端前端/运营管理平台/www/index.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/index.html
@@ -33,8 +33,7 @@
 				<li>超级管理员</li>
 				<li class="dropDown dropDown_hover">
 					<a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
-					<ul class="dropDown-menu menu radius box-shadow">
-						<li><a href="article-edt.html">修改密码</a></li>
+					<ul class="dropDown-menu menu radius box-shadow">z
 						<li><a href="login.html">退出</a></li>
 				</ul>
 			</li>
@@ -69,6 +68,14 @@
 					<li><a data-href="pmanager-list.html" data-title="管理员管理" 
 					href="javascript:;">
 						管理员管理
+					</a></li>
+					<li><a data-href="pmanager-ad.html" data-title="管理员管理" 
+					href="javascript:;">
+						管理员添加
+					</a></li>
+					<li><a data-href="article-edt.html" data-title="修改密码" 
+					href="javascript:;">
+						修改密码
 					</a></li>
 				</ul>
 			</dd>
@@ -137,7 +144,7 @@
 		<div class="Hui-tabNav-wp">
 			<ul id="min_title_list" class="acrossTab cl">
 				<li class="active">
-					<span title="我的桌面" data-href="welcome.html">我的桌面</span>
+					<span title="我的桌面">我的桌面</span>
 					<em></em></li>
 		</ul>
 	</div>
@@ -146,7 +153,6 @@
 	<div id="iframe_box" class="Hui-article">
 		<div class="show_iframe">
 			<div style="display:none" class="loading"></div>
-			<iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>
 	</div>
 </div>
 </section>
