--- a/代码类/WEB管理端前端/运营管理平台/www/pmanager-ad.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pmanager-ad.html
@@ -18,7 +18,7 @@
 <title>品牌管理</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 修改密码 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 添加管理员 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	
 	<div class="mt-20">
@@ -26,32 +26,23 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">管理员姓名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" readonly="readonly" 
-				 class="input-text" value="admin" placeholder="" 
+				<input type="text" class="input-text" value="" placeholder="" 
 				 id="articletitle" name="articletitle">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">管理员账号：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" readonly="readonly" class="input-text" 
-				value="10010101" placeholder="" id="articletitle2" 
+				<input type="text"  class="input-text" 
+				value="" placeholder="" id="articletitle2" 
 				name="articletitle2">
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">旧密码：</label>
+			<label class="form-label col-xs-4 col-sm-2">密码：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="password" class="input-text" value="" 
 				placeholder="" id="articletitle2" name="articletitle2">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">新密码：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="password" class="input-text" value="" 
-				placeholder="" id="articletitle2" 
-				name="articletitle2">
 			</div>
 		</div>
 		<div class="row cl">
@@ -71,23 +62,17 @@
 				<input type="checkbox">财务
 			</div>
 		</div>
-				</select>
-			</div>
-		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button class="btn btn-primary radius" onclick="editm()">确认修改</button>
+				<button class="btn btn-primary radius">
+				<a href="login.html">确认添加</a></button>
 				<button onClick="removeIframe();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
 	</form>
 	</div>
 </div>
- <script type="text/javascript">
- 	function editm() {
- 		alert("修改成功！！");
- 	}
- </script>
+ 
 <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
 <script type="text/javascript" src="static/h-ui/js/H-ui.min.js"></script>
