--- a/代码类/WEB管理端前端/运营管理平台/www/banner-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/banner-list.html
@@ -53,7 +53,34 @@
 					<td><input name="" type="checkbox" value=""></td>
 					<td>1</td>
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
-					<td>广告</td>
+					<td>商业广告</td>
+					<td><a href="www.baidu.com"><h3>东鹏</h3></a></td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>1</td>
+					<td><img src="temp/brand/shengxiang.jpg"></td>
+					<td>商业广告</td>
+					<td><a href="www.baidu.com"><h3>盛翔</h3></a></td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>1</td>
+					<td><img src="temp/brand/ambio.jpg"></td>
+					<td>商业广告</td>
+					<td><a href="www.baidu.com"><h3>Ambio</h3></a></td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>1</td>
+					<td><img width="210" src="http://img3.imgtn.bdimg.com/it/u=320223963,591479636&fm=214&gp=0.jpg"></td>
+					<td>商业广告</td>
 					<td><a href="www.baidu.com"><h3>百度</h3></a></td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;
 					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
