--- a/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/entering-list.html
@@ -60,15 +60,95 @@
 					<td><input name="" type="checkbox" value=""></td>
 					<td>大学</td>
 					<td>高等院校</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
 					<td>学校的历史十分的悠久，有着深厚的底蕴，是学生学习的圣地。</td>
 					<td>杭州</td>
 					<td>浙江</td>
-					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
 					<td>张三</td>
 					<td>330000000000000000</td>
 					<td>15100000000</td>
 					<td>15100000000@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学A</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>学校有着深厚的底蕴，是学生学习的圣地。</td>
+					<td>台州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>Marry</td>
+					<td>330000000000000001</td>
+					<td>15100000001</td>
+					<td>15100000001@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学2</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>学校是学生学习的圣地。</td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>张四</td>
+					<td>330000000000000010</td>
+					<td>15100000010</td>
+					<td>15100001100@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学3</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td> </td>
+					<td>湖州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>张三</td>
+					<td>330000000000123400</td>
+					<td>15100032000</td>
+					<td>15100002100@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学4</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>学校的有着许多优秀的校友。</td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>Alan</td>
+					<td>330000000000000003</td>
+					<td>15100000040</td>
+					<td>15100000200@163.com</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
+					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学6</td>
+					<td>高等院校</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td> </td>
+					<td>福州</td>
+					<td>福建</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>刘六</td>
+					<td>330000000066000000</td>
+					<td>15100000660</td>
+					<td>15100000666@163.com</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none"  href="javascript:;" title="审核"><i class="Hui-iconfont">&#xe6df;
 					</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
