--- a/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/organization-list.html
@@ -51,6 +51,59 @@
 					<td>培训机构</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>50007</td>
+					<td>B培训中心</td>
+					<td>
+					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					</td>
+					<td>我们培训中心历年，都有着许多人气，培育出许多优秀的大学生。
+					</td>
+					<td>台州</td>
+					<td>浙江</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>50010</td>
+					<td>培训中心D</td>
+					<td>
+					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					</td>
+					<td></td>
+					<td>杭州</td>
+					<td>浙江</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>50001</td>
+					<td>培训中心</td>
+					<td>
+					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					</td>
+					<td>本培训中心承诺，一定尽自己最大的努力帮助学生成长。</td>
+					<td>湖州</td>
+					<td>浙江</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>50015</td>
+					<td>培训中心</td>
+					<td>
+					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
+					</td>
+					<td></td>
+					<td>青岛</td>
+					<td>山东</td>
+					<td>培训机构</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
