--- a/代码类/WEB管理端前端/运营管理平台/www/pcourse_list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pcourse_list.html
@@ -50,8 +50,90 @@
 				<tr style="text-align:center;" class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
 					<td>100021</td>
-					<td>PHP</td>
-					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+					<td>PHP实践</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100020</td>
+					<td>JAVA基础学习</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100031</td>
+					<td>高等数学1</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100053</td>
+					<td>JAVAEE实验设计</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100091</td>
+					<td>数据结构</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100029</td>
+					<td>C语言程序设计</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100008</td>
+					<td>Sping MVC</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100081</td>
+					<td>离散数学</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100034</td>
+					<td>编译原理</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100017</td>
+					<td>H5移动开发</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr style="text-align:center;" class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>100102</td>
+					<td>计算机网络</td>
+					<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="修改"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
 		</table>
