--- a/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/platform_bill.html
@@ -51,7 +51,47 @@
 			<tbody>
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>大学入驻</td>
+					<td>大学A入驻</td>
+					<td><img width="210" src="temp/brand/dongpeng.jpeg"></td>
+					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>0</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>机构5入驻</td>
+					<td><img width="210" src="temp/brand/ambio.jpg"></td>
+					<td>有机构需要入驻本平台，目前双方已经确相关细节</td>
+					<td>0</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学H入驻</td>
+					<td><img width="210" src="temp/brand/shengxiang.jpg"></td>
+					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>0</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>大学M入驻</td>
+					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>0</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>机构3入驻</td>
+					<td><img src="temp/brand/dongpeng.jpeg"></td>
+					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
+					<td>0</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>机构9入驻</td>
 					<td><img src="temp/brand/dongpeng.jpeg"></td>
 					<td>有大学需要入驻本平台，目前双方已经确相关细节</td>
 					<td>0</td>
