--- a/代码类/WEB管理端前端/运营管理平台/www/pmanager-list.html
+++ b/代码类/WEB管理端前端/运营管理平台/www/pmanager-list.html
@@ -37,13 +37,43 @@
 			<tbody >
 				<tr class="text-c">
 					<td><input name="" type="checkbox" value=""></td>
-					<td>50005</td>
-					<td>培训中心</td>
-					<td>
-					<img width="210" class="picture-thumb" src="temp/200x150.jpg">
-					</td>
-					<td>我们培训中心师资力量十分强大，可以帮助学生很好地提升自己的学习水平。
-					</td>
+					<td>张三</td>
+					<td>10010101</td>
+					<td>e10adc3949ba59abbe56e057f20f883e</td>
+					<td>系统  财务</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>李四</td>
+					<td>10010201</td>
+					<td>733d7be2196ff70efaf6913fc8bdcabf</td>
+					<td>财务</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>administrator</td>
+					<td>10010102</td>
+					<td>e35cf7b66449df565f93c607d5a81d09</td>
+					<td>门户</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>艾伦</td>
+					<td>10010202</td>
+					<td>6c44e5cd17f0019c64b042e4a745412a</td>
+					<td>财务 门户</td>
+					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+				</tr>
+				<tr class="text-c">
+					<td><input name="" type="checkbox" value=""></td>
+					<td>Marry</td>
+					<td>10010503</td>
+					<td>44d7231696044319858dc2c9a498f0da</td>
+					<td>财务</td>
 					<td class="f-14 product-brand-manage"><a style="text-decoration:none" class="ml-5"  href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 				</tr>
 			</tbody>
